# argparse

./: CMakeLists.txt  README.md
src/: Argument.cpp  Argument.hpp  Flag.cpp  Flag.hpp  Parser.cpp  Parser.hpp  Program.cpp  Program.hpp
test/: testMain.cpp
